User message input added

--- a/example-3/index.html
+++ b/example-3/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
       <h1>Hello</h1>
-
-      <button id="show-message-button">Click me!</button>
+      <input type="text" id="message-input" />
+      <button id="show-message-button">Enter Message, Then Click Me!</button>
 
       <button id="hide-message-button">Hide One Message</button>
 
