--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -7,6 +7,7 @@
       <h1>Notes app</h1>
       <input type="text" id="note-input" />
       <button id="add-note-button">Add note</button>
+      <button id="clear-notes-button">Clear All notes</button>
       <div id="main-container">
 
       </div>
